--- a/Javascript_Tutorial.tex
+++ b/Javascript_Tutorial.tex
@@ -3420,10 +3420,33 @@ ES6 introduced a more flexible, easier syntax to export modules:
 \item \colorbox{lightgray}{import} is a keyword that imports any object, function, or data type.
 \end{itemize}
 
-
-
 \newpage
-\section{Promises}
+\section{JavaScript Promises}
+
+\subsection{Introduction}
+In web development, asynchronous programming is notorious for being a challenging topic. An \textit{asynchronous operation} is one that allows the computer to “move on” to other tasks while waiting for the asynchronous operation to complete. Asynchronous programming means that time-consuming operations do not have to bring everything else in our programs to a halt. \\
+\newline
+There are countless examples of asynchronicity in our everyday lives. Cleaning our house, for example, involves asynchronous operations such as a dishwasher washing our dishes or a washing machine washing our clothes. While we wait on the completion of those operations, we are free to do other chores. \\
+\newline
+Similarly, web development makes use of asynchronous operations. Operations like making a network request or querying a database can be time-consuming, but JavaScript allows us to execute other tasks while awaiting their completion. \\
+\newline
+This chapter will teach how modern JavaScript handles asynchronicity using the \colorbox{lightgray}{Promise} object, introduced with ES6. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \newpage
 \section{Async-Await}
 \newpage
