--- a/Javascript_Tutorial.tex
+++ b/Javascript_Tutorial.tex
@@ -3761,11 +3761,62 @@ Let us review about asynchronous JavaScript and promises.
 \item To take advantage of concurrency, we can use \colorbox{lightgray}{Promise.all()}.
 \end{itemize}
 
-
-
-
 \newpage
-\section{Async-Await}
+\section{Async Await}
+\subsection{Introduction}
+Often in web development, we need to handle asynchronous actions— actions we can wait on while moving on to other tasks. We make requests to networks, databases, or any number of similar operations. JavaScript is non-blocking: instead of stopping the execution of code while it waits, JavaScript uses an \href{https://www.youtube.com/watch?v=8aGhZQkoFbQ&feature=youtu.be}{event-loop} which allows it to efficiently execute other tasks while it awaits the completion of these asynchronous actions. \\
+\newline
+Originally, JavaScript used callback functions to handle asynchronous actions. The problem with callbacks is that they encourage complexly nested code which quickly becomes difficult to read, debug, and scale. With ES6, JavaScript integrated native \href{https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise}{promises} which allow us to write significantly more readable code. JavaScript is continually improving, and \href{https://en.wikipedia.org/wiki/ECMAScript#8th_Edition_-_ECMAScript_2017}{ES8} provides a new syntax for handling our asynchronous action, \colorbox{lightgray}{\textit{async...await}}. The \colorbox{lightgray}{async...await} syntax allows us to write asynchronous code that reads similarly to traditional synchronous, imperative programs. \\
+\newline
+The \colorbox{lightgray}{async...await} syntax is \href{https://en.wikipedia.org/wiki/Syntactic_sugar}{syntactic sugar}— it does not introduce new functionality into the language, but rather introduces a new syntax for using promises and \href{https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Generator}{generators}. Both of these were already built in to the language. Despite this, \colorbox{lightgray}{async...await} powerfully improves the readability and scalability of our code. 
+
+\subsection{The async Keyword}
+The async keyword is used to write functions that handle asynchronous actions. We wrap our asynchronous logic inside a function prepended with the async keyword. Then, we invoke that function.
+
+async function myFunc() {
+  // Function body here
+};
+
+myFunc();
+We’ll be using async function declarations throughout this lesson, but we can also create async function expressions:
+
+const myFunc = async () => {
+  // Function body here
+};
+
+myFunc();
+async functions always return a promise. This means we can use traditional promise syntax, like .then() and .catch with our async functions. An async function will return in one of three ways:
+
+If there’s nothing returned from the function, it will return a promise with a resolved value of undefined.
+If there’s a non-promise value returned from the function, it will return a promise resolved to that value.
+If a promise is returned from the function, it will simply return that promise
+async function fivePromise() { 
+  return 5;
+}
+
+fivePromise()
+.then(resolvedValue => {
+    console.log(resolvedValue);
+  })  // Prints 5
+In the example above, even though we return 5 inside the function body, what’s actually returned when we invoke fivePromise() is a promise with a resolved value of 5.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \newpage
 \section{Requests}
 
